Test changes for Packagist upload

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     },
     "autoload": {
         "psr-4": {
-            "jones\\wschat\\": ""
+            "jones\\wschat\\": "",
+            "WSChat\\": "src"
         }
     }
 }
